# DeltaRobot

./: .gitignore  CMakeLists.txt  README.md
dynamics/: gen_delta_control_laws.m  gen_delta_dynamics_lagrangian.m
dynamics/artifacts/: A.mat  B.mat  D.mat  t1.mat  t2.mat  t3.mat
dynamics/utils/: animate.m  christoffel_symbols.m  forward_kinematics.m  lagrangian.m
include/: app.hpp  app_state_init.hpp  app_state_moving.hpp  app_state_shutting_down.hpp  app_state_thinking.hpp  app_state_waiting.hpp  defines.hpp  environment_state.hpp  force_sensor.hpp  forward_kinematics.hpp  hardware.hpp  position_recognizer.hpp  robot_parameters.hpp  robot_state.hpp  stopwatch.hpp
src/: app.cpp  app_state_init.cpp  app_state_moving.cpp  app_state_shutting_down.cpp  app_state_thinking.cpp  app_state_waiting.cpp  environment_state.cpp  force_sensor.cpp  forward_kinematics.cpp  main.cpp  position_recognizer.cpp  robot_parameters.cpp  robot_state.cpp
test/: CMakeLists.txt  forward_kin_test.cpp
test/forward_kin_artifacts/: sim_results.txt
tools/dynamics/: README.md  gen_delta_control_laws.m  gen_delta_dynamics_lagrangian.m  gen_delta_forward_kin.m  sim_delta_OL_lagrangian.m
tools/dynamics/utils/: delta_OL_L.m  draw_moment.m  rot_z.m  transform2cartesian.m
tools/trajopt/: README.md
tools/vision/: README.md
